changed List.copyOf(tempList) to Collections.unmodifiableList(tempList)